{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 10,
  "lineage": "964ccdfd-08fd-f166-9a73-e2da71929f8a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "6443",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-23T08:10:45.667-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-60f7c97c-3d96-48a1-908/global/firewalls/k8s-external",
            "log_config": [],
            "name": "k8s-external",
            "network": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/global/networks/k8s-vpc",
            "params": [],
            "priority": 1000,
            "project": "project-60f7c97c-3d96-48a1-908",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/global/firewalls/k8s-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-03-23T08:10:45.890-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-60f7c97c-3d96-48a1-908/global/firewalls/k8s-internal",
            "log_config": [],
            "name": "k8s-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/global/networks/k8s-vpc",
            "params": [],
            "priority": 1000,
            "project": "project-60f7c97c-3d96-48a1-908",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/global/firewalls/k8s-internal",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260313",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/zones/asia-south1-a/disks/k8s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-03-23T08:24:38.236-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/project-60f7c97c-3d96-48a1-908/zones/asia-south1-a/instances/k8s-master",
            "instance_id": "2337692922095134174",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "yxWdQ3czQ5o=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\nPOD_CIDR=\"10.244.0.0/16\"\n\napt-get update -y\napt-get upgrade -y\n\nswapoff -a\nsed -i '/ swap / s/^/#/' /etc/fstab\n\nmodprobe overlay\nmodprobe br_netfilter\n\ncat \u003c\u003cEOF | tee /etc/modules-load.d/k8s.conf\noverlay\nbr_netfilter\nEOF\n\ncat \u003c\u003cEOF | tee /etc/sysctl.d/k8s.conf\nnet.bridge.bridge-nf-call-iptables  = 1\nnet.bridge.bridge-nf-call-ip6tables = 1\nnet.ipv4.ip_forward                 = 1\nEOF\n\nsysctl [...]
            "name": "k8s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.180.57.248",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/global/networks/k8s-vpc",
                "network_ip": "10.160.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/regions/asia-south1/subnetworks/k8s-vpc",
                "subnetwork_project": "project-60f7c97c-3d96-48a1-908",
                "vlan": 0
              }
            ],
            "project": "project-60f7c97c-3d96-48a1-908",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/zones/asia-south1-a/instances/k8s-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node"
            ],
            "tags_fingerprint": "PMlaEWobTyo=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260313",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/zones/asia-south1-a/disks/k8s-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-03-23T08:25:17.466-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/project-60f7c97c-3d96-48a1-908/zones/asia-south1-a/instances/k8s-worker",
            "instance_id": "9198708671271200178",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "UsNMf2bEQFs=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\nMASTER_IP=\"10.160.0.2\"\n\napt-get update -y\napt-get upgrade -y\n\nswapoff -a\nsed -i '/ swap / s/^/#/' /etc/fstab\n\nmodprobe overlay\nmodprobe br_netfilter\n\ncat \u003c\u003cEOF | tee /etc/modules-load.d/k8s.conf\noverlay\nbr_netfilter\nEOF\n\ncat \u003c\u003cEOF | tee /etc/sysctl.d/k8s.conf\nnet.bridge.bridge-nf-call-iptables  = 1\nnet.bridge.bridge-nf-call-ip6tables = 1\nnet.ipv4.ip_forward                 = 1\nEOF\n\nsysctl - [...]
            "name": "k8s-worker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.100.182.113",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/global/networks/k8s-vpc",
                "network_ip": "10.160.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/regions/asia-south1/subnetworks/k8s-vpc",
                "subnetwork_project": "project-60f7c97c-3d96-48a1-908",
                "vlan": 0
              }
            ],
            "project": "project-60f7c97c-3d96-48a1-908",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/zones/asia-south1-a/instances/k8s-worker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node"
            ],
            "tags_fingerprint": "PMlaEWobTyo=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_instance.k8s_master",
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-60f7c97c-3d96-48a1-908/global/networks/k8s-vpc",
            "mtu": 0,
            "name": "k8s-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3331881179995236646",
            "numeric_id": "3331881179995236646",
            "project": "project-60f7c97c-3d96-48a1-908",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-60f7c97c-3d96-48a1-908/global/networks/k8s-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}